[package]
name = "ip-cn-asn"
version = "0.1.4"
edition = "2021"
authors = ["NoBey <nobey@nobey.cn>"]
description = "A tool to detect and colorize Chinese ASN information in IP addresses"
license = "MIT"
readme = "README.md"

[dependencies]
regex = "1.8.4"
lazy_static = "1.4.0"
termcolor = "1.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2", features = ["extra_traits"], default-features = false }

[target.'cfg(target_os = "linux")'.build]
rustflags = ["-C", "target-feature=+crt-static"] 